--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,8 +4,10 @@ encoding//Fortress/core/Core_register.py=utf-8
 encoding//Fortress/core/Core_run.py=utf-8
 encoding//Fortress/main.py=utf-8
 encoding//Fortress/modules/Mod_commutils.py=utf-8
+encoding//Fortress/modules/Mod_interactive.py=utf-8
 encoding//Fortress/modules/Mod_sqlalchemy.py=utf-8
 encoding//Fortress/modules/Mod_sqlconnect.py=utf-8
+encoding//Fortress/modules/Mod_sshcontrol.py=utf-8
 encoding//Fortress/modules/Mod_view.py=utf-8
 encoding//collectd/main.py=utf-8
 encoding//collectd/modules/CommUtils.py=utf-8
